tests/algorithms/x/OCaml/graphs/strongly_connected_components.ml
(* Generated by Mochi transpiler v0.10.63 on 2025-08-12 08:38 +0700 *)


let rec __is_list v =
  let open Obj in
  let r = repr v in
  if is_int r then (magic v : int) = 0
  else
    match tag r with
    | 0 ->
        let t = field r 1 in
        if is_int t then (magic t : int) = 0
        else __is_list (magic t)
    | _ -> false

let rec __show v =
  let open Obj in
  let r = repr v in
  if __is_list v then
    __show_list (Obj.magic v)
  else if is_int r then
    string_of_int (magic v : int)
  else
    match tag r with
    | 0 -> __show_tuple (Obj.magic v)
    | 252 -> Printf.sprintf "'%s'" (String.escaped (magic v : string))
    | 253 -> string_of_float (magic v)
    | _ -> "<value>"
and __show_list l =
  match l with
  | [] -> "[]"
  | _ -> "[" ^ String.concat " " (List.map __show l) ^ "]"
and __show_tuple t =
  let open Obj in
  let r = repr t in
  let rec aux i =
    if i >= size r then []
    else __show (Obj.obj (field r i)) :: aux (i + 1)
  in
  "(" ^ String.concat ", " (aux 0) ^ ")"
and __str v =
  let open Obj in
  let r = repr v in
  if __is_list v then
    __str_list (Obj.magic v)
  else if is_int r then
    string_of_int (magic v : int)
  else
    match tag r with
    | 0 -> __str_tuple (Obj.magic v)
    | 252 -> (magic v : string)
    | 253 -> string_of_float (magic v)
    | _ -> "<value>"
and __str_list l =
  match l with
  | [] -> "[]"
  | _ -> "[" ^ String.concat " " (List.map __str l) ^ "]"
and __str_tuple t =
  let open Obj in
  let r = repr t in
  let rec aux i =
    if i >= size r then []
    else __str (Obj.obj (field r i)) :: aux (i + 1)
  in
  "(" ^ String.concat ", " (aux 0) ^ ")"


let nil = Obj.repr 0


let _now_seed = ref 0
let _now_seeded = ref false

let _now () =
  if not !_now_seeded then (
    match Sys.getenv_opt "MOCHI_NOW_SEED" with
    | Some s -> (try _now_seed := int_of_string s; _now_seeded := true with _ -> ())
    | None -> ()
  );
  if !_now_seeded then (
    _now_seed := (!(_now_seed) * 1664525 + 1013904223) mod 2147483647;
    !_now_seed
  ) else int_of_float (Sys.time () *. 1000000000.)


let _mem () =
  int_of_float (Gc.allocated_bytes ())

exception Break
exception Continue

exception Return

let rec topology_sort graph vert visited =
  let __ret = ref ([] : (int) list) in
  (try
  let graph = (Obj.magic graph : int list list) in
  let vert = (Obj.magic vert : int) in
  visited := (Obj.magic !visited : bool list);
  visited := (List.mapi (fun __i __x -> if __i = vert then true else __x) (!visited));
  let order = ref (([] : (int) list)) in
  (try List.iter (fun neighbour ->
    try
  if not ((let __l = !visited in let __i = neighbour in let __len = List.length __l in List.nth __l (if __i >= 0 then __i else __len + __i))) then (
  order := (Obj.magic (!order @ topology_sort (graph) (Obj.repr (neighbour)) (visited)) : int list);
  );
    with Continue -> ()) ((let __l = graph in let __i = vert in let __len = List.length __l in List.nth __l (if __i >= 0 then __i else __len + __i))) with Break -> ());
  order := (Obj.magic (List.append (!order) [(Obj.magic (vert) : int)]) : int list);
  __ret := (Obj.magic (!order) : int list); raise Return
  with Return -> !__ret)

and find_component graph vert visited =
  let __ret = ref ([] : (int) list) in
  (try
  let graph = (Obj.magic graph : int list list) in
  let vert = (Obj.magic vert : int) in
  visited := (Obj.magic !visited : bool list);
  visited := (List.mapi (fun __i __x -> if __i = vert then true else __x) (!visited));
  let comp = ref ([vert]) in
  (try List.iter (fun neighbour ->
    try
  if not ((let __l = !visited in let __i = neighbour in let __len = List.length __l in List.nth __l (if __i >= 0 then __i else __len + __i))) then (
  comp := (Obj.magic (!comp @ find_component (graph) (Obj.repr (neighbour)) (visited)) : int list);
  );
    with Continue -> ()) ((let __l = graph in let __i = vert in let __len = List.length __l in List.nth __l (if __i >= 0 then __i else __len + __i))) with Break -> ());
  __ret := (Obj.magic (!comp) : int list); raise Return
  with Return -> !__ret)

and strongly_connected_components graph =
  let __ret = ref ([] : (int list) list) in
  (try
  let graph = (Obj.magic graph : int list list) in
  let n = List.length (graph) in
  let visited = ref (([] : (bool) list)) in
  (try for _ = 0 to (n - 1) do
    try
  visited := (Obj.magic (List.append (!visited) [(Obj.magic (false) : bool)]) : bool list);
    with Continue -> ()
  done with Break -> ());
  let reversed = ref (([] : (int list) list)) in
  (try for _ = 0 to (n - 1) do
    try
  reversed := (Obj.magic (List.append (!reversed) [(Obj.magic ([]) : int list)]) : int list list);
    with Continue -> ()
  done with Break -> ());
  (try for i = 0 to (n - 1) do
    try
  (try List.iter (fun neighbour ->
    try
  reversed := (List.mapi (fun __i __x -> if __i = neighbour then (List.append ((let __l = !reversed in let __i = neighbour in let __len = List.length __l in List.nth __l (if __i >= 0 then __i else __len + __i))) [(Obj.magic (i) : int)]) else __x) (!reversed));
    with Continue -> ()) ((let __l = graph in let __i = i in let __len = List.length __l in List.nth __l (if __i >= 0 then __i else __len + __i))) with Break -> ());
    with Continue -> ()
  done with Break -> ());
  let order = ref (([] : (int) list)) in
  (try for i = 0 to (n - 1) do
    try
  if not ((let __l = !visited in let __i = i in let __len = List.length __l in List.nth __l (if __i >= 0 then __i else __len + __i))) then (
  order := (Obj.magic (!order @ topology_sort (graph) (Obj.repr (i)) (visited)) : int list);
  );
    with Continue -> ()
  done with Break -> ());
  visited := [];
  (try for _ = 0 to (n - 1) do
    try
  visited := (Obj.magic (List.append (!visited) [(Obj.magic (false) : bool)]) : bool list);
    with Continue -> ()
  done with Break -> ());
  let components = ref (([] : (int list) list)) in
  let i = ref (0) in
  (try while (!i < n) do
    try
  let v = (let __l = !order in let __i = ((n - !i) - 1) in let __len = List.length __l in List.nth __l (if __i >= 0 then __i else __len + __i)) in
  if not ((let __l = !visited in let __i = v in let __len = List.length __l in List.nth __l (if __i >= 0 then __i else __len + __i))) then (
  let comp = ref (find_component (!reversed) (Obj.repr (v)) (visited)) in
  components := (Obj.magic (List.append (!components) [(Obj.magic (!comp) : int list)]) : int list list);
  );
  i := (!i + 1);
    with Continue -> ()
  done with Break -> ());
  __ret := (Obj.magic (!components) : int list list); raise Return
  with Return -> !__ret)

and main () =
  let __ret = ref (Obj.magic 0) in
  (try
  let test_graph_1 = ref ([Obj.repr ([2; 3]); Obj.repr ([0]); Obj.repr ([1]); Obj.repr ([4]); Obj.repr ([])]) in
  let test_graph_2 = ref ([[1; 2; 3]; [2]; [0]; [4]; [5]; [3]]) in
  print_endline ((__str (Obj.magic (strongly_connected_components (!test_graph_1)) : Obj.t)));
  print_endline ((__str (Obj.magic (strongly_connected_components (!test_graph_2)) : Obj.t)));
    !__ret
  with Return -> !__ret)


let () =
  let mem_start = _mem () in
  let start = _now () in
  ignore (main ());
  let finish = _now () in
  let mem_end = _mem () in
  let dur = (finish - start) / 1000 in
  let mem_bytes = Stdlib.max 0 (mem_end - mem_start) in
  Printf.printf "{\n  \"duration_us\": %d,\n  \"memory_bytes\": %d,\n  \"name\": \"%s\"\n}\n" dur mem_bytes "main";
  ()
